Changelog
=========

0.4 (unreleased)
----------------

- Nothing changed yet.


0.3 (2012-08-24)
----------------

- Splitted the zestcachetuning.js file so we have one version for
  authenticated users and one for anonymous. [vincent]


0.2 (2012-08-23)
----------------

- Store a cookie with the username so we don't have to make an Ajax
  call everytime. [vincent]

- Fixed an error happening with anonymous users. [vincent]


0.1 (2012-01-12)
----------------

- Initial release [vincent]