@@ -72,7 +72,7 @@ First, we'll simply disable this option:
 
 It will disable calling the 'replace_fullname' method call:
 
-    >>> self.browser.open('http://nohost/plone/zest.cachetuning.js')
+    >>> self.browser.open('http://nohost/plone/zest.cachetuning_auth.js')
     >>> 'replace_fullname();' in self.browser.contents
     False
 
@@ -81,7 +81,7 @@ If we enable the option again, the method is called:
     >>> self.browser.open('http://nohost/plone/portal_zestcachetuning/edit')
     >>> self.browser.getControl(name='jq_replace_username:boolean').value = True
     >>> self.browser.getControl(name='form.button.save').click()
-    >>> self.browser.open('http://nohost/plone/zest.cachetuning.js')
+    >>> self.browser.open('http://nohost/plone/zest.cachetuning_auth.js')
     >>> 'replace_fullname();' in self.browser.contents
     True
 
@@ -90,6 +90,6 @@ We can also specify a custom CSS query to find the username:
     >>> self.browser.open('http://nohost/plone/portal_zestcachetuning/edit')
     >>> self.browser.getControl(name='jq_replace_username_selector').value = '.my_custom_selector'
     >>> self.browser.getControl(name='form.button.save').click()
-    >>> self.browser.open('http://nohost/plone/zest.cachetuning.js')
+    >>> self.browser.open('http://nohost/plone/zest.cachetuning_auth.js')
     >>> "var username_holder = $('.my_custom_selector');" in self.browser.contents
     True
