@@ -4,8 +4,9 @@ Changelog
 0.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Return userid when full name is empty. [vincent]
 
+- Cleaned sources - added buildout for tests. [maurits]
 
 0.3 (2012-08-24)
 ----------------
